# CookBook

./: .ruff.toml  README.md  docker-compose.dev.yml  justfile  main.py  pyproject.toml  pytest.ini  settings.py
alembic/: env.py
alembic/versions/: 2cc744e65b85_init.py
cookbook/: database.py  exceptions.py  main.py
cookbook/models/: __init__.py  ingredient.py  recipe.py  recipe_ingredients.py
cookbook/repositories/: ingredient_repository.py  recipe_repository.py
cookbook/routers/: ingredient_router.py  recipe_router.py
cookbook/schemas/: ingredient.py  recipe.py
cookbook/services/: ingredient_service.py  recipe_service.py
tests/: conftest.py
tests/repositories/: test_ingredient_repository.py  test_recipe_repository.py
tests/services/: test_ingredient_service.py
