[project]
name = "cookbook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.137.1",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.1",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
]
